# dotfiles

./: github-recovery-codes.txt
Obsidian/Math/: 判断一元函数的间断点及类型.md
Obsidian/Math/.obsidian/: appearance.json  workspace.json
Obsidian/Math/.obsidian/plugins/obsidian-excalidraw-plugin/: data.json
Obsidian/Math/Excalidraw/: Drawing 2023-12-09 23.46.24.excalidraw.md
btop/: btop.conf
foot/: foot.ini
gtk-3.0/: settings.ini
hypr/: hyprland.conf  hyprpaper.conf
hypr/scripts/: lock.sh
kitty/: kitty.conf
mpv/: mpv.conf
nekos/: package-lock.json  package.json  tailwind.config.js
nekos/src/: App.tsx  Index.tsx  Login.tsx  styles.css
nekos/src-tauri/: Cargo.toml  tauri.conf.json
nekos/src-tauri/src/: commands.rs  errs.rs  main.rs
nekos/src/components/: Dialog.tsx  LoginInput.tsx
nvim/: init.lua  lazy-lock.json
nvim/lua/core/: autocommands.lua  keymaps.lua  options.lua
nvim/lua/lsp/: emmet_ls.lua  handlers.lua
nvim/lua/plugins/: bufferline.lua  cmp.lua  comment.lua  conform.lua  dadbod.lua  dressing.lua  gitsigns.lua  glow.lua  illuminate.lua  indent-blankline.lua  indentscope.lua  markdown.lua  mason.lua  notice.lua  nvim-notify.lua  nvim-tree.lua  persistence.lua  telescope.lua  theme.lua  todo.lua  treesitter.lua  trouble.lua
nvim/lua/plugins/editor/: conform.lua  telescope.lua
nvim/lua/plugins/lsp/: lspconfig.lua
nvim/lua/plugins/ui/: nvim-tree.lua
nvim/lua/snippets/: all.json  package.json  python.json
qt5ct/: qt5ct.conf
qt6ct/: qt6ct.conf
rofi/: config.rasi
waybar/: config  style.css  weather.py
